# cookest-cli

./: .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.md
.github/workflows/: publish-ghcr.yml
src/: config.rs  docker.rs  main.rs  templates.rs
src/commands/: backup.rs  build.rs  config.rs  down.rs  init.rs  logs.rs  mod.rs  restore.rs  status.rs  up.rs  update.rs
