[package]
name = "cookest-cli"
version = "0.1.0"
edition = "2024"
description = "Self-hosting CLI for the Cookest platform"
license = "MIT"
repository = "https://github.com/Cookest/cookest-cli"

[[bin]]
name = "cookest"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
dialoguer = { version = "0.11", features = ["fuzzy-select"] }
console = "0.15"
indicatif = "0.17"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
rand = "0.9"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
colored = "3"
dirs = "6"
which = "7"
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"

[dev-dependencies]
tempfile = "3"
